sample/Gateway.yml
# https://istio.io/latest/docs/tasks/traffic-management/ingress/ingress-control/
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "httpbin.example.com"
