sample/VirtualService.yml
# https://istio.io/latest/docs/tasks/traffic-management/ingress/ingress-control/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "httpbin.example.com"
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
      prefix: /status
    - uri:
      prefix: /delay
    route:
    - destination:
      port:
        number: 8000
      host: httpbin
